fix(modal): fix issue where modal title had no spacing + set correct font-size

--- a/print-portal/src/styles/cover.scss
+++ b/print-portal/src/styles/cover.scss
@@ -5,16 +5,15 @@
         .sticky-header {
             position: sticky;
             top: 0;
-            display:flex;
+            display: flex;
             flex-wrap: nowrap;
-            background-color:#fff;
-            height:60px;
-            width:calc(100% - 15px);
+            background-color: #fff;
+            width: calc(100% - 15px);
             h1 {
-                flex-grow:2;
+                flex-grow: 2;
             }
             .close-detail-pop-up {
-                padding:0 10px;
+                padding: 0 10px;
             }
         }
     }
